[tool.pytest.ini_options]
pythonpath = ["."]

[tool.poetry]
name = "health-app"
version = "0.1.0"
description = "DATA1300 Health API"
authors = ["Benjamin"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110"
uvicorn = "^0.27"
pydantic = "*"
pandas = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"